--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -149,8 +149,8 @@ While the focus here is on vertical gradients, it is important to note that in h
 
 Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions. It is critical in influencing -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).
 Leaf area density (*i.e.*, leaf area per unit volume) patterns along the vertical gradient are heterogeneous across forests (Fig. `r fig_NEON_vertical`a-b, Supporting Information Figure `r SIfig_NEON_all`). 
-Tropical and temperate forests with dense canopies dominated by broadleaf trees generally have highest leaf area density in the upper canopy layers, but understory leaf area density is often relatively high in the understory as well, sometimes with undulating patterns [e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a, @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993] *[@parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985; @ishiiExploringRelationshipsCanopy2004a; @parkerCanopyLightTransmittance2002]*. 
-In forests with more open upper canopies, including many needle-leaf forests, leaf area density can be predominantly accumulated in the lower canopy or understory layers [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`a, @hanberryOpenForestEcosystems2020a; @lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a]. 
+Tropical and temperate forests with dense canopies dominated by broadleaf trees generally have highest leaf area density in the upper canopy layers, but understory leaf area density is often relatively high in the understory as well, sometimes with undulating patterns [e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a, @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993; @parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985]. 
+In forests with more open upper canopies, including many needle-leaf forests, leaf area density can be predominantly accumulated in the lower canopy or understory layers [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`a, @hanberryOpenForestEcosystems2020a; @lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016]. 
 Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns [e.g., @bonan_ecological_2016; @almeidaContrastingFireDamage2016; @starkReframingTropicalSavannization2020; @hanberryOpenForestEcosystems2020a]. 
 In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting leaf area density patterns [@parkerStructuralPhenologyLeaf2004; @parkerConsequencesEnvironmentalHeterogeneity2019]. 
 In this review, we focus on growing season conditions (peak leaf area index, LAI) unless otherwise noted.
@@ -199,7 +199,7 @@ Therefore, $T_{leaf}-T_{air}$ decreases with wind speed [Fig. `r fig_leaf_T`b, @
 
 Under hot and dry conditions, leaves face a trade-off between $T_{leaf}$ regulation and water conservation [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. 
 With adequate water, high $\lambda E$ can facilitate heat dissipation, particularly for leaves with smaller size (higher $g_b$) and larger $g_s$ [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts2021; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007].
-However, when leaf water demand (influenced by VPD and stomatal opening) exceeds the rate of supply, conservation of water ($g_s$ - limitation) occurs at the cost of increasing $T_{leaf}$ [Fig. `r fig_leaf_T`e, @fauset_differences_2018].
+However, when leaf water demand (influenced by VPD and stomatal opening) exceeds the rate of supply, conservation of water ($g_s$ limitation) occurs at the cost of increasing $T_{leaf}$ [Fig. `r fig_leaf_T`e, @fauset_differences_2018].
 Therefore, at high solar radiation loads, leaves can maintain $T_{leaf}$ closer to $T_{air}$ at maximum $g_s$, but during $g_s$ limitation, solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020; @konradLeafTemperatureIts2021].
 
 
@@ -267,7 +267,7 @@ $\ddagger$ 1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 
 # refs in this table currently in the nocite field at top of document 
 ```
 
-Sun leaves have anatomical, morphological, and physiological traits that reduce heat and water stress (Table `r table_leaf_traits`). They are generally smaller, thicker, and more deeply lobed, resulting in higher $g_b$ and lower $T_{leaf}-T{air}$ [Fig. `r fig_leaf_T`, @leighInfluenceLeafSize2017; @vogelSunLeavesShade1968a; @sackHowStrongIntracanopy2006;@zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a]. Higher stomatal and vein densities allow higher $g_s$ and facilitate higher transpiration [@zwienieckiHydraulicLimitationsImposed2004]. Higher cuticle thickness and trichome density reduce water loss. Steeper leaf angles reduce radiation loads and thereby decrease $T_{leaf}-T{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988]. These traits collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA), but their greater thermal capacitance makes them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies, where light is comparatively homogeneous, exposed leaves are shaped more by maximum air temperature ($T_{air_{max}}$) and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
+Sun leaves have anatomical, morphological, and physiological traits that reduce heat and water stress (Table `r table_leaf_traits`). They are generally smaller, thicker, and more deeply lobed, resulting in higher $g_b$ and lower $T_{leaf}-T_{air}$ [Fig. `r fig_leaf_T`, @leighInfluenceLeafSize2017; @vogelSunLeavesShade1968a; @sackHowStrongIntracanopy2006;@zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a]. Higher stomatal and vein densities allow higher $g_s$ and facilitate higher transpiration [@zwienieckiHydraulicLimitationsImposed2004]. Steeper leaf angles reduce radiation loads and thereby decrease $T_{leaf}-T_{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988]. These traits collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA), but their greater thermal capacitance makes them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies, where light is comparatively homogeneous, exposed leaves are shaped more by maximum air temperature ($T_{air_{max}}$) and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
 
 
 Elemental concentrations such as nitrogen ($N_{area}$) and phosphorus ($P_{area}$) contribute to high rates of leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes in sun leaves [Table `r table_leaf_traits`, @scartazzaInvestigatingEuropeanBeech2016; @niinemetsWithincanopyVariationRate2004a; @weerasingheCanopyPositionAffects2014], and may be optimized throughout the vertical canopy gradient [@buckleyOptimalCarbonPartitioning2021]. 
@@ -404,7 +404,7 @@ NSC reserves also increase with tree size, such that larger trees have relativel
 
 
 **Vertical gradients also affect the climate sensitivity of metabolism and growth.** 
-Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) even before soil water becomes limited in forests not experiencing drought [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Therefore, periods of high atmospheric demand--be these on time scales of hours, days, or seasons--tend to cause greater reductions in tree transpiration and photosynthesis in tall trees that occupy canopy positions in relatively dense-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. This is consistent with the observation that $g_s$ limitation with $T_{air}$ increases with height in the canopy (Table `r table_leaf_metabolism`). More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004]-- often combined with greater effective rooting depth--may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and lower capacity to adjust traits related to carbon metabolism to drought [@bartholomewSmallTropicalForest2020]. This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table `r table_leaf_traits`, @mcdowellRelationshipTreeHeight2011].
+Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) even before soil water becomes limited in forests not experiencing drought [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Therefore, periods of high atmospheric demand--be these on time scales of hours, days, or seasons--tend to cause greater reductions in tree transpiration and photosynthesis in tall trees that occupy canopy positions in relatively dense-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. This is consistent with the observation that $g_s$ limitation with $T_{air}$ increases with height in the canopy (Table `r table_leaf_metabolism`). More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004]-- often combined with greater effective rooting depth--may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and lower the capacity to adjust traits related to carbon metabolism to drought [@bartholomewSmallTropicalForest2020]. This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table `r table_leaf_traits`, @mcdowellRelationshipTreeHeight2011].
 
 In turn, the climate sensitivity of woody growth tends to be greater in canopy trees. In the field of dendrochronology, it is generally accepted that tree ring records of large, exposed trees are best suited for climate reconstructions because their annual growth displays the greatest sensitivity to interannual variation in climate [@frittsTreeRingsClimate1976]. However, only a relatively limited number of studies have directly examined drought- or temperature-sensitivities as a function of tree size.
 These have generally found greater sensitivity to low precipitation or seasonally high temperatures among larger, more exposed trees [**Fig. `r fig_treerings`**, @trouillierSizeMattersComparison2018; @gillerotTreeNeighbourhoodDiversity2020; @mcgregorTreeHeightLeaf2021], corroborating evidence from globally disurbed forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015]. In addition to lower drought resistance of growth, larger trees frequently exhibit lower ability to recover from stress [ie. resilience, @mcgregorTreeHeightLeaf2021; @gillerotTreeNeighbourhoodDiversity2020], and greater increases in mortality [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019].
