--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -436,15 +436,16 @@ Additional research is required to understand the mechanisms underlying these in
 Canopy trees account for the majority of forest ecosystem water and carbon cycling.
 While studies partitioning transpiration across forest vertical gradients are rare, both ET and transpiration have been shown to increase with height in a *Picea abies* forest in Germany, such that the upper half of the canopy contributed an estimated 80% of daytime ET [@staudtVerticalStructureEvapotranspiration2011]. 
 Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy trees jointly contributed approximately 93% of ET, or 88% of transpiration [Fig `r fig_ecosystem`a; @kunertRevisedHydrologicalModel2017], and trees >33 cm DBH contributed >80% of transpiration in a forest in Costa Rica [@mooreUpscalingTranspirationDiverse2018]. 
-In terms of C cycling, it has been estimated that canopy strata contribute $\geq$ 64% of net daytime CO~2~ uptake [i.e., GPP - ecosystem respiration, including from soil; @missonPartitioningForestCarbon2007]. 
-Large trees also dominate in terms of woody above ground net primary productivity ($ANPP_{woody}$) and mortality ($M_{woody}$), with trees $\geq$ 10cm DBH usually contributing > 85% of ANPPwoody and Mwoody across 25 globally distributed forests [Fig. `r fig_ecosystem`b, @piponiot_sizerelated_inreview]. 
+In terms of C cycling, it has been estimated that canopy strata contribute $\ge$ 64% of net daytime CO~2~ uptake [i.e., GPP - ecosystem respiration, including from soil; @missonPartitioningForestCarbon2007]. 
+Large trees also dominate in terms of woody above ground net primary productivity ($ANPP_{woody}$) and mortality ($M_{woody}$), with trees $\geq$ 10cm DBH usually contributing > 85% of $ANPP_{woody}$ and $M_{woody}$ across 25 globally distributed forests [Fig. `r fig_ecosystem`b, @piponiot_sizerelated_inreview]. 
 
-![**Figure `r fig_ecosystem`.** Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests. Panel (a) is from @kunertRevisedHydrologicalModel2017; panel (b) presents averages for 42 tropical forests from @piponiot_sizerelated_inreview.](schematics/ecosystem vertical partitioning/ecosystem partitioning.png)
+![**Figure `r fig_ecosystem`.** Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests. Panel (a) is from @kunertRevisedHydrologicalModel2017; panel (b) presents averages for 14 tropical forests from @piponiot_sizerelated_inreview.](schematics/ecosystem vertical partitioning/ecosystem partitioning.png)
 
-It is less clear how thermal sensitivity of water and carbon fluxes vary across strata, but likely responses can be inferred based on the patterns and mechanisms reviewed above.
-We expect that transpiration, GPP, and $ANPP_{woody}$ should all be sensitive to high temperatures-- at least under conditions of moderate to high VPD [@grossiordPlantResponsesRising2020]. 
-Further, increases in canopy $T_{leaf}$ are also shown to reduce forest GPP in the tropics [@pauTropicalForestTemperature2018]. 
-A rare example of a study comparing the climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an El Nino drought in Panama, while the smallest size classes had higher productivity during the drought, likely because of increased light in the understory. 
+It is less clear how thermal sensitivity of water and carbon fluxes vary across strata, but probable responses can be inferred based on the patterns and mechanisms reviewed above.
+We expect that transpiration, GPP, and $ANPP_{woody}$ should all be more sensitive to high temperatures in the upper canopy than in the understory -- at least under conditions of moderate to high VPD [@grossiordPlantResponsesRising2020]. 
+Because canopy trees dominate these fluxes (Fig. `r fig_ecosystem`), their responses will drive the whole-ecosystem response, potentially with modest buffering by the understory. 
+Thus, for example, increases in canopy $T_{leaf}$ reduce forest GPP in the tropics [@pauTropicalForestTemperature2018]. 
+A rare example of a study comparing the climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an *El Niño* drought in Panama, while the smallest size classes had higher productivity during the drought, likely because of increased light in the understory. 
 It remains far less clear how thermal sensitivity varies across forest strata under wet conditions, but both physiological mechanisms (Fig. `r fig_leaf_T`) and tree ring evidence (Fig. `r fig_treerings`) suggests that understory trees may respond more negatively to hot, wet conditions. 
 Further research is required to better understand the thermal sensitivity of forest ecosystem function across strata.
 
@@ -510,6 +511,8 @@ Detailed structural information from lidar data has been used to measure tree he
 - However, when we ask the critical question of how the temperature sensitivities  of metabolism and woody growth varies across these different environments, we can't say much-- there are only a small number of studies, often showing insignificant differences or mixed results.
 - The preponderance of available data suggest that while large canopy trees are the most vulnerable to warming when water is limited, understory trees may be more vulnerable under more mesic conditions, but more research is needed. 
 - Critically, change to the vertical gradient--e.g., through increased mortality of canopy trees--will change processses across forest strata, with potentially dramatic consequences. (some of the literature on forest degredation or fragmentation could inform what happens when those gradients change)
+
+- under moderate temperatures, the canopy is the advantageous place for trees in terms of being able to have higher photosynthesis and growth. However, as temperatures increase, it will be increasingly common that it is the more stressful place to be.
 
 ## Acknowledgements
 Thanks to Norbert Kunert, Camille Piponiot, Peter B. Boucher and Andrew B. Davies for providing figure materials. 
